# zoeken

./: CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.runtime  Makefile  README.md  default.config.yml  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
docs/: client-features.md  deployment.md  settings.yml.example
docs/compatibility/: data-assets.json  data-assets.md  intentional-differences.md  inventory.json  inventory.md  routes.json  routes.md  scorecard.md  targets.md
docs/plans/: architecture-cleanup.md  native-search-api.md
docs/security/: audit.md
packaging/debian/: zoeken.settings.yml
packaging/nix/: package.nix
packaging/scripts/: build-deb.sh
tools/: README.md  compat_inventory.py
zoeken-client/: package.json  vite.config.ts
zoeken-client/scripts/: assert-generated-native.mjs  sync-client-data.mjs
zoeken-client/src/components/: ImageLightbox.tsx  InfoboxCard.tsx  ResultTemplates.test.ts  ResultTemplates.tsx  SearchResultList.tsx  VideoCard.tsx
zoeken-client/src/lib/: api.test.ts  api.ts  searchDisplay.ts  useLocalAnswers.ts
zoeken-client/src/lib/clientFeatures/: calculator.test.ts  calculator.ts  crypto.ts  dateTime.ts  doiRewrite.test.ts  doiRewrite.ts  fixtures.ts  hostnames.test.ts  hostnames.ts  index.test.ts  index.ts  random.ts  selfInfo.test.ts  selfInfo.ts  statistics.ts  timeZone.test.ts  timeZone.ts  trackerUrlRemover.test.ts  trackerUrlRemover.ts  unitConverter.ts
zoeken-client/src/routes/: preferences.tsx  search.tsx
zoeken/zoeken-autocomplete/src/: lib.rs
zoeken/zoeken-botdetect/: Cargo.toml
zoeken/zoeken-botdetect/src/: lib.rs
zoeken/zoeken-data/: Cargo.toml  build.rs
zoeken/zoeken-data/src/: lib.rs
zoeken/zoeken-engine-core/src/: challenge.rs  error_category.rs  lib.rs
zoeken/zoeken-engine-core/tests/: error_count_state_machine_prop.rs  suspension_backoff_prop.rs
zoeken/zoeken-engines/: Cargo.toml
zoeken/zoeken-engines/src/: lib.rs  registry.rs
zoeken/zoeken-engines/src/engines/: bing.rs  soundcloud.rs  util.rs
zoeken/zoeken-engines/tests/: all_engines_conformance.rs
zoeken/zoeken-favicons/src/: lib.rs  resolver.rs  safe_outbound.rs
zoeken/zoeken-metrics/src/: recorder.rs
zoeken/zoeken-network/: Cargo.toml
zoeken/zoeken-network/src/: flight_cache.rs  lib.rs
zoeken/zoeken-plugins/src/: lua.rs
zoeken/zoeken-search/src/: aggregation.rs  lib.rs  metrics.rs  selection.rs
zoeken/zoeken-search/tests/: engine_selection_prop.rs  full_failure_prop.rs
zoeken/zoeken-server/: Cargo.toml
zoeken/zoeken-server/src/: ahmia_filter.rs  engine_health.rs  executor.rs  image_proxy.rs  info.rs  lib.rs  limiter.rs  main.rs  middleware.rs  outbound_cache.rs  serialize.rs  static_assets.rs  tracker_cleanup.rs
zoeken/zoeken-server/src/native/: mod.rs  schema.rs  serialize.rs
zoeken/zoeken-server/tests/: json_roundtrip_prop.rs  limiter_fail_open.rs  schema_goldens.rs
zoeken/zoeken-server/tests/fixtures/schema/: stats_errors_shape.json
zoeken/zoeken-settings/src/: lib.rs  resolve.rs
zoeken/zoeken-settings/tests/: settings_file_overlay_prop.rs  settings_load_unit.rs
