[package]
name = "zoeken-botdetect"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
ipnet = { workspace = true }
tracing = { workspace = true }
moka = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
